[gd_scene load_steps=5 format=3 uid="uid://dhgyl3yoh5xcg"]

[ext_resource type="Script" uid="uid://cfl02gur5pcde" path="res://scripts/ui/menus/menu_characterselect.gd" id="1_qbg4c"]
[ext_resource type="Theme" uid="uid://bommyqwo15hbx" path="res://theme1.tres" id="2_iuf3o"]
[ext_resource type="Script" uid="uid://c3ysaqnmo1oo8" path="res://scripts/ui/ui_text.gd" id="3_sssvk"]
[ext_resource type="PackedScene" uid="uid://6lvn3tolsp7r" path="res://scenes/ui/buttons/menu_button.tscn" id="4_0o7yx"]

[node name="CharacterSelectMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(960, 540)
script = ExtResource("1_qbg4c")

[node name="Title" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -359.5
offset_top = -380.0
offset_right = 360.5
offset_bottom = -298.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(360, 41)
theme = ExtResource("2_iuf3o")
theme_override_font_sizes/normal_font_size = 64
bbcode_enabled = true
text = "[wave freq=3]Select Character"
fit_content = true
scroll_active = false
shortcut_keys_enabled = false
horizontal_alignment = 1
script = ExtResource("3_sssvk")
sr_enabled = true
sr_rotation = 3.0

[node name="Characters" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.083000004
anchor_top = 0.324
anchor_right = 0.91700006
anchor_bottom = 0.694
offset_left = 0.63998413
offset_top = 0.07998657
offset_right = -0.6401367
offset_bottom = 0.47998047
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0
alignment = 1

[node name="StartButton" parent="." instance=ExtResource("4_0o7yx")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.78700006
anchor_right = 0.5
anchor_bottom = 0.78700006
offset_left = -240.0
offset_top = 0.039916992
offset_right = 80.00049
offset_bottom = 100.03998
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(1.5, 1.5)
default_text = "Start"
justification = 1

[node name="BackButton" parent="." instance=ExtResource("4_0o7yx")]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = -150.0
offset_right = 420.0
offset_bottom = -50.0
grow_vertical = 0
default_text = "Modes"
default_color = Color(0.54497427, 0.5449743, 0.5449741, 1)
press_color = Color(0, 0, 0, 1)

[node name="MenuButton" parent="." instance=ExtResource("4_0o7yx")]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = -275.0
offset_right = 420.0
offset_bottom = -174.9997
grow_vertical = 0
default_text = "Menu"
default_color = Color(0.54497427, 0.5449743, 0.5449741, 1)
press_color = Color(0, 0, 0, 1)

[connection signal="pressed" from="StartButton" to="." method="_on_start_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_pressed"]
[connection signal="pressed" from="MenuButton" to="." method="_on_menu_pressed"]
